syntax = "proto2";
package cometLogin;

enum LanguageType {
    l_Null = 0;
    l_Default = 1;
    l_China = 2;
    l_Japan = 3;
    l_TraditionalChinese = 4;
    l_Max = 5;
}

enum PlatformType {
    pt_Null = 0;
    pt_IOS = 1;
    pt_Android = 2;
    pt_Max = 3;
}

message Ret_GameVersion {
  required string version = 1;
  required string announcementTitle = 2;
  required string announcementContent = 3;
  required uint32 serverState = 4;
}

message GatewayServerData {
  required string gateIP = 1;
  required uint32 gatePort = 2;
  required string token = 3;
  required int32 accId = 4;
}

message Req_RegAccount {
  required string accountName = 1;
  required string mail = 2;
  required string password = 3;
}

message Ret_RegAccount {
  required GatewayServerData data = 1;
}

message Req_LoginAccount {
  required string accountName = 1;
  required string password = 2;
}

message Ret_LoginAccount {
  required GatewayServerData data = 1;
}

message Req_FindPassword {
  required string accountName = 1;
  required string mail = 2;
  required string password = 3;
}

message Ret_FindPassword {
  required GatewayServerData data = 1;
}

message LoginError {
  required uint32 errorId = 1;
}

message Req_QuickToken {
}

message Ret_QuickToken {
  required string token = 1;
}

message Req_QuickLogin {
  required string token = 1;
}

message Ret_QuickLogin {
  required GatewayServerData data = 1;
}

message Req_ThirdLogin {
  required string openId = 1;
}

message Ret_ThirdLogin {
  required GatewayServerData data = 1;
}

message Req_BindAccount {
  required string token = 1;
  required string accountName = 2;
  required string password = 3;
}

message Ret_BindAccount {
}

message Req_Announcement {
}

message Ret_Announcement {
  required string title = 1;
  required string content = 2;
}

message Req_GameVersion {
  required PlatformType type = 1 [default=pt_Android];
  required LanguageType language = 2 [default=l_Default];
}

message Req_BiliLogin {
  required uint32 uid = 1;
  required string access_key = 2;
  required string deviceInfo = 3;
}

message Ret_BiliLogin {
  required GatewayServerData data = 1;
}
